08_Networking/30-02_Gateway_Cont/envoy-gatewayclass.yaml
# Exercise 30-02 v3.2.0
#
# 1. Define the GatewayClass (links to the installed controller)
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy-gatewayclass
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
