08_Networking/30-02_Gateway_Cont/webstore-gateway.yaml
# Exercise 30-02 v3.2.0
#
# 2. Define the Gateway (the external entry point)
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: webstore-gateway
  namespace: default
spec:
  gatewayClassName: envoy-gatewayclass 
  listeners:
  - name: http
    protocol: HTTP
    port: 80
---
