08_Networking/30-02_Gateway_Cont/webstore-route.yaml
# Exercise 30-02 v3.2.0
#
# 3. Define the HTTPRoute (the actual routing rule)
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: webstore-route
  namespace: default
spec:
  parentRefs:
  - name: webstore-gateway
  hostnames:
  - "webstore.local"
  rules:
  - backendRefs:
    - name: webstore-svc
      port: 8080
---
